--- a/src/components/Toolbar.scss
+++ b/src/components/Toolbar.scss
@@ -47,7 +47,7 @@
     }
 
     .ToolIcon.ToolIcon__lock {
-      margin-inline-end: var(--space-factor);
+      //margin-inline-end: var(--space-factor);
       &.ToolIcon_type_floating {
         margin-left: 0.1rem;
       }
